<resources>
    <string name="app_name">IrlenGlasses</string>
    <string name="action_settings">Settings</string>
    <string name="buttonCameraName">Camera Filter</string>
    <string name="appNameText">IrelanGlasses App</string>
    <string name="login">login user</string>
    <string name="logoDesc">IrlenLogo</string>
    <string name="userName">שם משתמש</string>
    <string name="passwordTxt">סיסמה</string>
    <string name="logoPic">LogoPic</string>
    <string name="pswd_Lbl">Password</string>
    <string name="passHint">00000000</string>
    <string name="pictures">picture</string>
    <string name="ARViewText">show me my glasses</string>
    <string name="CreateText">פרטי משתמש</string>
    <string name="firstname">שם פרטי</string>
    <string name="lastName">שם משפחה</string>
    <string name="ID">תעודת זהות</string>
    <string name="RadioCus">לקוח</string>
    <string name="RadioDia">מאבחן</string>
    <string name="FNameHint">שם פרטי</string>
    <string name="IDHint">תעודת זהות</string>
    <string name="Login">התחבר</string>
    <string name="select_color">בחר גוון</string>
    <string name="Create_User">צור משתמש</string>
    <string name="select_color_rgb">בחר גוון RGB</string>
    <string name="buttonColorBlend">Color Blend</string>
    <string name="pickHue1">בחר גוון ראשון</string>
    <string name="pockHue2">בחר גוון שני</string>
    <string name="colorBlndBtn">ערבל גוונים</string>
    <string name="newHue1">#FFFFFF</string>
    <string name="placeHolderHue1">#11F113</string>
    <string name="placeHolderHue2">#5504F0</string>
    <string name="blendedColor">צבע מעורבל</string>
    <string name="blendedHues" />
    <string name="colorpalleticon">ColorPalletIcon</string>
    <string name="cameraicon">cameraIcon</string>
    <string name="imagecapturearea">imageCaptureArea</string>
    <string name="hexColor_hint">77DC143C</string>
    <string name="greeting_text_prefix">Hey</string>
    <string name="poundSignForHexColors">#</string>
    <string name="separator_mark">:</string>
</resources>
