<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_user_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#59FFDAD8">

    <EditText
        android:id="@+id/first_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_user_form_text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:background="@android:drawable/screen_background_light"
        android:ems="10"
        android:hint="@string/FNameHint"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name_input"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:autofillHints=""
        android:background="@android:drawable/screen_background_light"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/password_id_number_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name_input"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:background="@android:drawable/screen_background_light"
        android:ems="10"
        android:hint="@string/IDHint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <ImageView
        android:id="@+id/logo_holder_internal_layouts"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginLeft="@dimen/def_margin"
        android:layout_marginTop="@dimen/LogoSideMargin"
        android:layout_marginEnd="@dimen/def_margin"
        android:contentDescription="@string/Image"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/user_type_radioButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_id_number_input"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radioButton2"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/RadioDia"
                android:textColor="#EB5E1919"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="27dp"
                android:layout_marginRight="27dp"
                android:text="@string/RadioCus"
                android:textColor="#EB5E1919"
                android:textSize="18sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/colorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/user_type_radioButtonLayout"
        android:layout_marginTop="24dp"
        android:gravity="right"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="27dp"
            android:layout_weight="1"
            android:layout_alignParentEnd="true">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/colorTitle"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/colorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_color" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/colorRGBEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/colorTextTitle"
                android:layout_alignParentRight="true"
                android:layout_marginTop="8dp"
                android:hint="@string/hexColor_hint"
                android:inputType="textCapCharacters"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/hexSymbolTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/colorTextTitle"
                android:layout_alignBottom="@+id/colorRGBEditText"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@+id/colorRGBEditText"
                android:gravity="center"
                android:text="@string/poundSignForHexColors"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/colorTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_color_rgb" />

        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/greeting_text_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_holder_internal_layouts"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/create_user_form_text"
        android:layout_width="150dp"
        android:layout_height="34dp"
        android:layout_below="@+id/greeting_text_input"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:text="@string/CreateText"
        android:textColor="#EB5E1919"
        android:textSize="18sp" />


</RelativeLayout>