<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#59FFDAD8"
    tools:context=".customer.ColorBlendingActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="147dp"
        android:layout_marginRight="147dp"
        android:contentDescription="@string/Image"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView4"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_alignEnd="@+id/imageView4"
        android:layout_alignRight="@+id/imageView4"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_marginStart="134dp"
        android:layout_marginLeft="134dp"
        android:layout_marginEnd="-99dp"
        android:layout_marginRight="-99dp"
        android:layout_marginBottom="-174dp"
        android:text="@string/pockHue2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView4"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_alignEnd="@+id/imageView4"
        android:layout_alignRight="@+id/imageView4"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginEnd="-100dp"
        android:layout_marginRight="-100dp"
        android:layout_marginBottom="-116dp"
        android:text="@string/pickHue1" />

    <Button
        android:id="@+id/buttonColorBlend"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="205dp"
        android:layout_height="45dp"
        android:layout_below="@+id/imageView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="114dp"
        android:layout_marginLeft="114dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:background="@layout/rounded_button_settings"
        android:text="@string/colorBlndBtn" />

    <EditText
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_alignStart="@+id/imageView4"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_alignEnd="@+id/imageView4"
        android:layout_alignRight="@+id/imageView4"
        android:layout_marginStart="-5dp"
        android:layout_marginLeft="-5dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@android:drawable/screen_background_light"
        android:hint="@string/placeHolderHue2"
        android:importantForAutofill="no"
        android:inputType="textCapCharacters"
        android:text="@string/placeHolderHue2" />

    <EditText
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_alignStart="@+id/imageView4"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_alignEnd="@+id/imageView4"
        android:layout_alignRight="@+id/imageView4"
        android:layout_marginStart="-9dp"
        android:layout_marginLeft="-9dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:background="@android:drawable/screen_background_light"
        android:inputType="textCapCharacters"
        android:hint="@string/placeHolderHue1"
        android:importantForAutofill="no"
        android:text="@string/placeHolderHue1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="110dp"
        android:layout_height="68dp"
        android:layout_below="@+id/buttonColorBlend"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="-10dp"
        android:layout_marginLeft="-10dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_toEndOf="@+id/blendedHuesRes"
        android:layout_toRightOf="@+id/blendedHuesRes"
        android:text="@string/blendedColor" />

    <TextView
        android:id="@+id/blendedHuesRes"
        android:layout_width="149dp"
        android:layout_height="79dp"
        android:layout_alignStart="@+id/buttonColorBlend"
        android:layout_alignLeft="@+id/buttonColorBlend"
        android:layout_alignEnd="@+id/buttonColorBlend"
        android:layout_alignRight="@+id/buttonColorBlend"
        android:layout_alignBottom="@+id/buttonColorBlend"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="111dp"
        android:text="@string/blendedHues" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="116dp"
        android:layout_toStartOf="@+id/blendedHuesRes"
        android:layout_toLeftOf="@+id/blendedHuesRes"
        app:srcCompat="@drawable/paint_icon_pallet"
        android:contentDescription="@string/colorpalleticon" />


</RelativeLayout>