<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_page_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ApplicationBackgroundColor"
    android:hapticFeedbackEnabled="false"
    android:orientation="vertical"
    android:visibility="visible"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/login_logo_holder"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginLeft="@dimen/def_margin"
        android:layout_marginTop="@dimen/LogoSideMargin"
        android:layout_marginEnd="@dimen/def_margin"
        android:contentDescription="@string/Image"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="374dp"
        android:layout_below="@+id/login_logo_holder"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="41dp">

        <Button
            android:id="@+id/loginButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="155dp"
            android:layout_height="61dp"
            android:layout_marginBottom="76dp"
            android:background="@layout/rounded_button_settings"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:text="@string/Login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/login_user_name_input_field"
            android:layout_width="153dp"
            android:layout_height="42dp"
            android:layout_marginTop="56dp"
            android:autoMirrored="true"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:hint="@string/userName"
            android:inputType="textPersonName"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/login_password_input_field"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/login_password_input_field"
            android:layout_width="154dp"
            android:layout_height="38dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="36dp"
            android:autoMirrored="true"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/passHint"
            android:imeActionLabel="@string/pswd_Lbl"
            android:inputType="numberPassword"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toStartOf="@+id/field_text_description_password"
            app:layout_constraintHorizontal_bias="0.22"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_user_name_input_field"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/field_text_description_username"
            android:layout_width="144dp"
            android:layout_height="41dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:text="@string/userName"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/login_user_name_input_field"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <TextView
            android:id="@+id/field_text_description_password"
            android:layout_width="139dp"
            android:layout_height="38dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:text="@string/passwordTxt"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/login_password_input_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/field_text_description_username"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>